// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CompiledSql type > accepts CompiledSql with Date param values 1`] = `"INSERT INTO "events" ("occurred_at") VALUES ($1)"`;

exports[`CompiledSql type > accepts CompiledSql with multiple params of mixed types 1`] = `
{
  "params": [
    "Alice",
    18,
    true,
  ],
  "text": "SELECT * FROM "users" WHERE "name" = $1 AND "age" > $2 AND "active" = $3",
}
`;

exports[`CompiledSql type > accepts CompiledSql with non-empty params 1`] = `
{
  "params": [
    "abc-123",
  ],
  "text": "SELECT * FROM "users" WHERE "id" = $1",
}
`;

exports[`CompiledSql type > accepts CompiledSql with null param values 1`] = `
{
  "params": [
    null,
    "abc-123",
  ],
  "text": "UPDATE "users" SET "deleted_at" = $1 WHERE "id" = $2",
}
`;

exports[`CompiledSql type > accepts a minimal valid CompiledSql object 1`] = `
{
  "params": [],
  "text": "SELECT 1",
}
`;

exports[`CompiledSql type accepts CompiledSql with Date param values 1`] = `"INSERT INTO "events" ("occurred_at") VALUES ($1)"`;

exports[`CompiledSql type accepts CompiledSql with multiple params of mixed types 1`] = `
{
  "params": [
    "Alice",
    18,
    true,
  ],
  "text": "SELECT * FROM "users" WHERE "name" = $1 AND "age" > $2 AND "active" = $3",
}
`;

exports[`CompiledSql type accepts CompiledSql with non-empty params 1`] = `
{
  "params": [
    "abc-123",
  ],
  "text": "SELECT * FROM "users" WHERE "id" = $1",
}
`;

exports[`CompiledSql type accepts CompiledSql with null param values 1`] = `
{
  "params": [
    null,
    "abc-123",
  ],
  "text": "UPDATE "users" SET "deleted_at" = $1 WHERE "id" = $2",
}
`;

exports[`CompiledSql type accepts a minimal valid CompiledSql object 1`] = `
{
  "params": [],
  "text": "SELECT 1",
}
`;
